# artifex-warp-newton-sim

./: README.md  artifex_advanced_notebook.ipynb  artifex_colab_interactive.ipynb  artifex_disc_cool.ipynb  artifex_disc_cool.nbconvert.ipynb  artifex_disc_cool_3d.ipynb  build_interactive_nb.py  fix_nb.py  generate_3d_nb.py  pyproject.toml
artifex/: __init__.py  config.py  properties.py
artifex/cell/: __init__.py  cell_scene.py  contact_qa.py  diffsim_opt.py  material_coupling.py  sensor_qa.py
artifex/isaac/: __init__.py  isaac_env.py
artifex/thermal/: __init__.py  crystallinity.py  disc_thermal.py  optimization.py  stress_estimate.py
artifex_sim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
notebooks/: disc_cooling_sim.ipynb
